# medrag

./: .env.example  .gitignore  README.md  docker-compose.yml  install.bat  pyproject.toml
backend/: requirements.txt
backend/config/: settings.py
backend/scripts/: run_ingestion.py
backend/src/medrag/ingestion/: models.py  pipeline.py  pubmed_client.py  storage.py
docs/: phase00_report.md  phase01_report.md  phase02_report.md
frontend/: requirements.txt
notebooks/: 02_pubmed_ingestion.ipynb
